[package]
name = "wasm"
version = "0.1.0"
edition = "2024"

[profile.release]
lto = true

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.100"
wasm-bindgen-futures = "0.4.54"

[dependencies.uuid]
version = "1.18.1"
features = [
    "v4",
    "v7",
    "js",
]

[dependencies.web-sys]
version = "0.3.77"
features = [
  "Navigator",
  "FileSystemGetFileOptions",
  "FileSystemDirectoryHandle",
  "FileSystemFileHandle",
  "FileSystemWritableFileStream",
  "File",
  "Window",
  "StorageManager",
  "Element",
  "Node",
  "NodeList",
  "NamedNodeMap",
  "Attr",
]




