[package]
name = "wasm"
version = "0.1.0"
edition = "2024"

[profile.release]
lto = true
opt-level = 'z'

[lib]
crate-type = ["cdylib"]

[dependencies]
hashbrown = "0.16.1"
wasm-bindgen = "0.2.100"
wasm-bindgen-futures = "0.4.54"

[dependencies.talc]
version = "4.4.3"
default-features = false 
features = ["lock_api", "counters"]

[dependencies.uuid]
version = "1.18.1"
features = [
    "v4",
    "v7",
    "js",
]

[dependencies.web-sys]
version = "0.3.77"
features = [
  "Navigator",
  "FileSystemGetFileOptions",
  "FileSystemDirectoryHandle",
  "FileSystemFileHandle",
  "FileSystemWritableFileStream",
  "File",
  "Window",
  "StorageManager",
  "Element",
  "Node",
  "NodeList",
  "NamedNodeMap",
  "Attr",
]


[dev-dependencies]
wasm-bindgen-test = "0.3.0"

