[package]
name = "wasm"
version = "0.1.0"
edition = "2024"

[profile.release]
lto = true
opt-level = 'z'

[lib]
crate-type = ["cdylib"]

[dependencies.wasm-bindgen]
version = "0.2.106"
default-features = false

[dependencies.wasm-bindgen-futures]
version = "0.4.54"
default-features = false 

[dependencies.talc]
version = "4.4.3"
default-features = false 
features = ["lock_api", "counters"]

[dependencies.uuid]
version = "1.18.1"
default-features = false
features = [
    "v4",
    "v7",
    "js",
]

[dependencies.web-sys]
version = "0.3.77"
default-features = false 
features = [
  "Navigator",
  "FileSystemGetFileOptions",
  "FileSystemDirectoryHandle",
  "FileSystemFileHandle",
  "FileSystemSyncAccessHandle",
  "File",
  "Window",
  "StorageManager",
  "Element",
  "Node",
  "NodeList",
  "NamedNodeMap",
  "Attr",
  "WorkerGlobalScope",
  "WorkerNavigator",
  "TextEncoder"
]

[dev-dependencies]
wasm-bindgen-test = "0.3.0"
